ui edited, validation and booking request at frontend. Backend architechture redesigned, endpoints and services for creating new bookings added